<resources>
    <string name="app_name">TicTacToe</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="draw_message">It\'s a draw!</string>
    <string name="player_turn">Turn: %s - %s</string>
    <string name="player_wins">%s wins!</string>
    <string name="reset_game">Reset game</string>
    <string name="enter_name">Enter name</string>
    <string name="save_and_play">Save and play</string>
    <string name="player1Score">Your Score: %s</string>
    <string name="player2ScoreWithName">%s Score:  %s</string>
    <string name="title_activity_ai_game">AiGameActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="reset_game_history">Reset Game History</string>
    <string name="reset_tictactoe_data">Reset TicTacToe Data</string>
    <string name="are_you_shore_to_reset">Are you sure you want to reset everything?</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="winner_popup_button">End Round and get winner</string>
    <string name="winner_text">"Winner is %s"</string>
    <string name="get_nearest_restaurant">Get Nearest Restaurant</string>
    <string name="stat_new_game">Stat new Game</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="settings">Settings</string>
    <string name="offline">Offline</string>
</resources>